--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,6 @@
 	<modules>
 		<module>Template</module>
 		<module>SpringSecCh1</module>
+		<module>SpringSecCh2</module>
 	</modules>
 </project>
