--- a/SpringSecCh2/src/main/resources/application.properties
+++ b/SpringSecCh2/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 # spring.security.user.name=foo
 # spring.security.user.password=foo
+
+
+#https://www.baeldung.com/spring-boot-h2-database
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:file:/data/demo
+
+#H2 Console specific Settings
+spring.h2.console.enabled=true
+spring.h2.console.settings.trace=true
+spring.h2.console.settings.web-allow-others=false
