--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,6 @@
 		<module>Template</module>
 		<module>SpringSecCh1</module>
 		<module>SpringSecCh2</module>
+		<module>SpringSecCh2_2</module>
 	</modules>
 </project>
