--- a/SpringSecCh3/pom.xml
+++ b/SpringSecCh3/pom.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>SpringSecurityGeneral</groupId>
-		<artifactId>SpringSecurityGeneral</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+    <groupId>SpringSecurityGeneral</groupId>
+    <artifactId>SpringSecurityGeneral</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+  
+  
+	<artifactId>SpringSecCh3</artifactId>
+	<name>SpringSecCh3</name>
 
 
-	<artifactId>Template</artifactId>
-	<name>Template</name>
-
-
-	<description>Demo project for Spring Boot</description>
+	<description>SpringBoot with SAML</description>
 	<properties>
 		<java.version>11</java.version>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<maven.compiler.source>1.8</maven.compiler.source>
-
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,15 +44,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-
-
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
