--- a/SpringSecCh1/pom.xml
+++ b/SpringSecCh1/pom.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-    <groupId>SpringSecurityGeneral</groupId>
-    <artifactId>SpringSecurityGeneral</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  
-  
+		<groupId>SpringSecurityGeneral</groupId>
+		<artifactId>SpringSecurityGeneral</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+
+
 	<artifactId>SpringSecCh1</artifactId>
 	<name>SpringSecCh1</name>
 
@@ -16,6 +17,8 @@
 	<description>Demo project for Spring Boot: Chapter 1</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,6 +48,15 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+
+
 		</plugins>
 	</build>
 
