--- a/SpringSecCh3/manifest.yml
+++ b/SpringSecCh3/manifest.yml
@@ -1,9 +1,9 @@
 ---
 version: 1
 applications:
-- name: template
+- name: SpringSecCh3
   memory: 1024M
   instances: 1
-  path: target/template-0.0.1-SNAPSHOT.jar
+  path: target/SpringSecCh3-0.0.1-SNAPSHOT.jar
 ---  buildpacks:
 ---    - sap_java_buildpack_1_37
