--- a/SpringSecCh3/src/main/resources/application.properties
+++ b/SpringSecCh3/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port = 8443
+server.ssl.enabled = true
+server.ssl.key-alias = spring
+server.ssl.key-store = classpath:saml/keystore.jks
+server.ssl.key-store-password = secret
 
+security.saml2.metadata-url = https://dev-53265996.okta.com/app/exk1ildy7rAoZtrTe5d7/sso/saml/metadata
